2002-06-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.h: Add fw_bw_field.
	* stack.cpp: Ditto.

2002-06-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* scatterer.cpp: Add spurious warnings in walls.

2002-06-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.cpp: Add propagate function.

2002-06-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: Add deep copy constructor.

2002-06-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* geometry.py: Fix typo bug.

2002-06-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Simplify interface for arbitrary excitations.

2002-06-03  Lieven Vanholme <Lieven.Vanholme@rug.ac.be>

	* camfr_wrap.cpp: Support for arbitrary excitations.

2002-05-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* infstack.cpp: Only warn when power flow is non-zero.

2002-05-10  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* infstack.cpp: Cleanup.
	
2002-05-10  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Remove brillouin_eliminate_modes.
	* bloch.cpp: Ditto.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Improve InfStack wrapping.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Set N to 1 for Monostack.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Fix field in exit medium.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* interface.cpp: Check if widths match.

2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* waveguide.h: Add c1_size().
	* bloch.h: Ditto.

2002-05-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Compare pointers instead of waveguides.

2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* material.cpp: Add eps_mu.

2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.cpp: Check for presence of gain medium.

2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.cpp: Detect bad expressions.