@@ -29,7 +29,7 @@ class infstack(unittest.TestCase):
         r = 0.3 * a * sqrt(pi)/2.
         r_wg = 0.25 * a * sqrt(pi)/2.
 
-        set_left_wall(slab_H_wall)
+        set_lower_wall(slab_H_wall)
 
         x_periods = 5
 
@@ -73,7 +73,7 @@ class infstack(unittest.TestCase):
 
         free_tmps()
 
-        set_left_wall(slab_E_wall) 
+        set_lower_wall(slab_E_wall) 
        
         self.failUnless(R_pass)
 
