@@ -32,7 +32,7 @@ class metal_splitter(unittest.TestCase):
         a = .600     # period
         r = .150/2.0 # rod radius
 
-        set_left_wall(slab_H_wall)
+        set_lower_wall(slab_H_wall)
 
         PML = 0.0
 
@@ -85,8 +85,7 @@ class metal_splitter(unittest.TestCase):
 
         free_tmps()
 
-        set_unstable_exp_threshold(1e-10)
-        set_left_wall(slab_E_wall)
+        set_lower_wall(slab_E_wall)
 
         self.failUnless(R_pass)
 
