@@ -1,3 +1,8 @@
+2002-07-15  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* camfr_wrap.cpp: replace set_left/right_wall by 
+	  set_lower/upper_wall.
+
 2002-06-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* stack.h: Add fw_bw_field.
